update spring boot 2 template

--- a/spring/src/main/resources/persistence-postgesql.properties
+++ b/spring/src/main/resources/persistence-postgesql.properties
@@ -1,7 +1,9 @@
-driverClassName=org.sqlite.JDBC
-url=jdbc:sqlite:memory:myDb?cache=shared
-username=sa
-password=sa
-hibernate.dialect=com.example.dialect.SQLiteDialect
+driverClassName=org.postgresql.Driver
+
+connection.url=jdbc:postgresql://localhost:5432/spring
+connection.username=postgres
+connection.password=root
+
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.hbm2ddl.auto=create-drop
 hibernate.show_sql=true
