--- a/spring/src/main/resources/persistence-sqlite.properties
+++ b/spring/src/main/resources/persistence-sqlite.properties
@@ -1,7 +1,9 @@
 driverClassName=org.sqlite.JDBC
-url=jdbc:sqlite:memory:myDb?cache=shared
-username=sa
-password=sa
-hibernate.dialect=com.example.dialect.SQLiteDialect
+
+connection.url=jdbc:sqlite:spring.db
+connection.username=sa
+connection.password=sa
+
+hibernate.dialect=com.example.spring.dialects.SQLiteDialect
 hibernate.hbm2ddl.auto=create-drop
 hibernate.show_sql=true
