--- a/spring/src/main/resources/persistence-h2.properties
+++ b/spring/src/main/resources/persistence-h2.properties
@@ -1,7 +1,9 @@
 driverClassName=org.h2.Driver
-url=jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1
-username=sa
-password=sa
+
+connection.url=jdbc:h2:mem:toggling.db;DB_CLOSE_DELAY=-1
+connection.username=sa
+connection.password=sa
+
 hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.show_sql=true
 hibernate.hbm2ddl.auto=create-drop
+hibernate.show_sql=true
